src/packaged/main/domain/objects/Product2/fields/AutomaticRenewal__c.field-meta.xml
<CustomField>
    <fullName>AutomaticRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to automatically renew contract line items (recalculating the end date) once they expire.</description>
    <inlineHelpText>If true, line items of this product are automatically renewed when their end date surpasses the cancellation period (they expire).</inlineHelpText>
    <label>Automatic Renewal</label>
    <type>Checkbox</type>
</CustomField>