src/packaged/main/domain/objects/Product2/fields/BillingCycle__c.field-meta.xml
<CustomField>
    <fullName>BillingCycle__c</fullName>
    <description>Controls the periodicity of billing for recurring payments</description>
    <inlineHelpText>Sets the duration of the billing period and therefore, how often this product is billed.</inlineHelpText>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>