src/packaged/main/domain/objects/Product2/fields/BillingMode__c.field-meta.xml
<CustomField>
    <fullName>BillingMode__c</fullName>
    <description>Defines how line items using this product are billed.</description>
    <inlineHelpText>Select when line items of this product are billed. As of today, the system only support Advance billing mode.</inlineHelpText>
    <label>Billing Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Arrears</fullName>
                <isActive>false</isActive>
                <label>Arrears</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>