src/packaged/main/domain/objects/Product2/fields/DescriptionFormatted__c.field-meta.xml
<CustomField>
    <fullName>DescriptionFormatted__c</fullName>
    <description>Rich text area to store formatted product description text.</description>
    <inlineHelpText>Enter and format text for the product description.</inlineHelpText>
    <label>Formatted Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>