src/packaged/main/domain/objects/Product2/fields/ImageDisplay__c.field-meta.xml
<CustomField>
    <fullName>ImageDisplay__c</fullName>
    <description>Displays the image.</description>
    <formula>IMAGE(ImageLink__c, &quot;No Image Available&quot;, 500, 500)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>