src/packaged/main/domain/objects/Product2/fields/ImageLink__c.field-meta.xml
<CustomField>
    <fullName>ImageLink__c</fullName>
    <description>Direct Link to the Image when hosted on external site</description>
    <inlineHelpText>Enter the direct link to the Product&apos;s image. URL can point to internally stored files or external files.</inlineHelpText>
    <label>Image Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>