src/packaged/main/domain/objects/Product2/fields/LineItemDateValidationMode__c.field-meta.xml
<CustomField>
    <fullName>LineItemDateValidationMode__c</fullName>
    <description>Configures the validation mode for start/end date of contract line items. Validation is implemented in validation rules on contract line items.</description>
    <inlineHelpText>Select the validation mode that is applied to contract line items, if they use the product. Any Day allows a start in any day of the month and is billed pro rata per day. Full month allows only start at the beginning of month and is billed pro rata full month.</inlineHelpText>
    <label>Line Item Date Validation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Month</fullName>
            </value>
            <value>
                <fullName>Any Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>