src/packaged/main/domain/objects/Product2/fields/MinimumContractTerm__c.field-meta.xml
<CustomField>
    <fullName>MinimumContractTerm__c</fullName>
    <description>The minimum contract term, when this product is used. Calculates the minimum duration (start/end date) of line items.</description>
    <inlineHelpText>Sets the initial duration (start date to end date) for newly created contract line items.</inlineHelpText>
    <label>Minimum Contract Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>24 months</fullName>
            </value>
            <value>
                <fullName>60 months</fullName>
            </value>
            <value>
                <fullName>96 months</fullName>
            </value>
            <value>
                <fullName>Lifetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>