src/packaged/main/domain/objects/Product2/fields/MinimumContractTermNumber__c.field-meta.xml
<CustomField>
    <fullName>MinimumContractTermNumber__c</fullName>
    <description>Converts the picklist value minimum contract term to a number.</description>
    <formula>VALUE(LEFT(TEXT(MinimumContractTerm__c), FIND(&apos; &apos;, TEXT(MinimumContractTerm__c)) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The select number, in months</inlineHelpText>
    <label>Minimum Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>