src/packaged/main/domain/objects/Product2/fields/RenewalTerm__c.field-meta.xml
<CustomField>
    <fullName>RenewalTerm__c</fullName>
    <description>Subscription renewal term in months, used to calculate the next end date after renewal.</description>
    <inlineHelpText>The renewal duration months. Each time, a contract line item is automatically renewed, the number of months is added to the end date.</inlineHelpText>
    <label>Renewal Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>