src/packaged/main/domain/objects/Product2/fields/TerminationPeriod__c.field-meta.xml
<CustomField>
    <fullName>TerminationPeriod__c</fullName>
    <description>The termination period that applies to all contract line items that use this product.</description>
    <inlineHelpText>Set the notice period for terminating contract line items of this product. Used to calculate the renewal date and the end date, if the position is terminated.</inlineHelpText>
    <label>Termination Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>