src/packaged/main/domain/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Defines the fundamental behavior of the product during billing, quoting, etc.</description>
    <inlineHelpText>Controls the processing behavior of the product: Base products are billed in Weclapp, while subscription products are billed in Salesforce.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductType</valueSetName>
    </valueSet>
</CustomField>