src/packaged/main/domain/objects/Product2/validationRules/Automatic_Renewal_Immutable.validationRule-meta.xml
<ValidationRule>
    <fullName>Automatic_Renewal_Immutable</fullName>
    <active>true</active>
    <description>Makes "Automatic Renewal" immutable. This is necessary to ensure integrity for billing period calculation.</description>
    <errorConditionFormula>ISCHANGED( AutomaticRenewal__c )</errorConditionFormula>
    <errorDisplayField>AutomaticRenewal__c</errorDisplayField>
    <errorMessage>Cannot be changed after a product was created. Delete or archive the product and create a new one instead.</errorMessage>
</ValidationRule>