src/packaged/main/domain/objects/Product2/validationRules/Billing_Cycle_Immutable.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Cycle_Immutable</fullName>
    <active>true</active>
    <description>Makes "Billing Cycle" immutable. This is necessary to ensure integrity for billing period calculation.</description>
    <errorConditionFormula>ISCHANGED( BillingCycle__c )</errorConditionFormula>
    <errorDisplayField>BillingCycle__c</errorDisplayField>
    <errorMessage>Cannot be changed after a product was created. Delete or archive the product and create a new one instead.</errorMessage>
</ValidationRule>