src/packaged/main/domain/objects/Product2/validationRules/Billing_Mode_Required_Subscription.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Mode_Required_Subscription</fullName>
    <active>true</active>
    <description>Billing mode is required, if the product type is subscription</description>
    <errorConditionFormula>ISPICKVAL(Type__c, &apos;Subscription&apos;) &amp;&amp; ISPICKVAL(BillingMode__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>BillingMode__c</errorDisplayField>
    <errorMessage>Select a billing mode for a subscription product</errorMessage>
</ValidationRule>