src/packaged/main/domain/objects/Product2/validationRules/Date_Validation_Mode_Immutable.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation_Mode_Immutable</fullName>
    <active>true</active>
    <description>Makes "Line Item Date Validation Mode" immutable. This is necessary so ensure integrity for sites and contract management.</description>
    <errorConditionFormula>ISCHANGED( LineItemDateValidationMode__c ) &amp;&amp; ISPICKVAL( LineItemDateValidationMode__c , &apos;Full Month&apos; )</errorConditionFormula>
    <errorDisplayField>LineItemDateValidationMode__c</errorDisplayField>
    <errorMessage>Validation mode cannot be changed to a more restrictive setting after the product was created. Delete or archive the product and create a new one instead.</errorMessage>
</ValidationRule>