src/packaged/main/domain/objects/Product2/validationRules/Minimum_Term_Compatible_Cycle.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Term_Compatible_Cycle</fullName>
    <active>true</active>
    <description>Minimum contract term must be compatible with the billing cycle.</description>
    <errorConditionFormula>NOT(ISPICKVAL(BillingCycle__c, &apos;One Time&apos;)) &amp;&amp; ISPICKVAL(MinimumContractTerm__c, &apos;Lifetime&apos;)</errorConditionFormula>
    <errorDisplayField>MinimumContractTerm__c</errorDisplayField>
    <errorMessage>Lifetime contract term can only be selected for one-time billing</errorMessage>
</ValidationRule>