src/packaged/main/domain/objects/Product2/validationRules/Minimum_Term_Required_Subscription.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Term_Required_Subscription</fullName>
    <active>true</active>
    <description>Minimum contract term is required for subscription products</description>
    <errorConditionFormula>ISPICKVAL(Type__c, &apos;Subscription&apos;) &amp;&amp; ISPICKVAL(MinimumContractTerm__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>MinimumContractTerm__c</errorDisplayField>
    <errorMessage>Select the minimum contract term for a subscription product</errorMessage>
</ValidationRule>