src/packaged/main/domain/objects/Product2/validationRules/Term_Required_For_Auto_Renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>Term_Required_For_Auto_Renewal</fullName>
    <active>true</active>
    <description>Renewal subscription term is required, if the product is &quot;automatic renewal&quot;.</description>
    <errorConditionFormula>ISBLANK(RenewalTerm__c) &amp;&amp; AutomaticRenewal__c</errorConditionFormula>
    <errorDisplayField>RenewalTerm__c</errorDisplayField>
    <errorMessage>Enter a renewal term, if the product is configured to automatic renew.</errorMessage>
</ValidationRule>