src/packaged/main/domain/objects/Product2/validationRules/Termination_Required_Subscription.validationRule-meta.xml
<ValidationRule>
    <fullName>Termination_Required_Subscription</fullName>
    <active>true</active>
    <description>Termination period is required, if the product type is subscription</description>
    <errorConditionFormula>ISPICKVAL(Type__c, &apos;Subscription&apos;) &amp;&amp; ISPICKVAL(TerminationPeriod__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>TerminationPeriod__c</errorDisplayField>
    <errorMessage>Select the termination notice for the subscription</errorMessage>
</ValidationRule>